调整： - 将规则变更历史的储存方式改为SQLite

--- a/common.gradle
+++ b/common.gradle
@@ -22,13 +22,20 @@ configurations {
 }
 
 dependencies {
-	// loom
+    // Minecraft
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
+    // Mojmap
 	mappings loom.officialMojangMappings()
+    // mixin extras
 	include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:0.2.2")))
+    // fabric
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
+    // carpet
 	modImplementation "carpet:fabric-carpet:${project.carpet_core_version}"
+    // SQLite JDBC
+    implementation("org.xerial:sqlite-jdbc:3.45.0.0")
+    include("org.xerial:sqlite-jdbc:3.45.0.0")
 }
 
 String MIXIN_CONFIG_PATH = 'carpet_igny_addition.mixins.json'
