--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,10 @@ plugins {
 preprocess {
 	strictExtraMappings = false
 
+    def mc1201 = createNode('1.20.1', 1_20_01, '')
+    def mc1202 = createNode('1.20.2', 1_20_02, '')
+    def mc1204 = createNode('1.20.4', 1_20_04, '')
+    def mc1206 = createNode('1.20.6', 1_20_06, '')
 	def mc1211 = createNode('1.21.1', 1_21_01, '')
 	def mc1213 = createNode('1.21.3', 1_21_03, '')
 	def mc1214 = createNode('1.21.4', 1_21_04, '')
@@ -18,6 +22,10 @@ preprocess {
 	def mc12110 = createNode('1.21.10', 1_21_10, '')
     def mc12111 = createNode('1.21.11', 1_21_11, '')
 
+    mc1201.link(mc1202, null)
+    mc1202.link(mc1204, null)
+    mc1204.link(mc1206, null)
+    mc1206.link(mc1211, null)
 	mc1211.link(mc1213, null)
 	mc1213.link(mc1214, null)
 	mc1214.link(mc1215, null)
