添加： 规则： - 无火闪电束 (lightningBoltNoFire)

--- a/versions/1.21.1/gradle.properties
+++ b/versions/1.21.1/gradle.properties
@@ -18,4 +18,5 @@ carpet_dependency=>=1.4.147
     carpet_core_version = 1.21-1.4.147+v240613
 
 # Dependencies
-	 fabric_api_version=0.116.6+1.21.1
+fabric_api_version=0.116.6+1.21.1
+lithium_dependency=curse.maven:lithium-360438:6290412
