--- a/versions/26.1/gradle.properties
+++ b/versions/26.1/gradle.properties
@@ -17,3 +17,4 @@ carpet_core_version = 26.1-beta-3+v260113
 
 # Dependencies
 	fabric_api_version=0.142.0+26.1
+lithium_dependency=com.github.Fallen-Breath:lithium-fabric:b7f9b66908
