--- a/versions/1.19.4/gradle.properties
+++ b/versions/1.19.4/gradle.properties
@@ -17,3 +17,4 @@ carpet_core_version = 1.19.4-1.4.100+v230314
 
 # Dependencies
 fabric_api_version=0.87.2+1.19.4
+lithium_dependency=curse.maven:lithium-360438:4439705
