--- a/versions/1.20.2/gradle.properties
+++ b/versions/1.20.2/gradle.properties
@@ -17,3 +17,4 @@ carpet_core_version = 1.20.2-1.4.118+v230921
 
 # Dependencies
 fabric_api_version=0.91.6+1.20.2
+lithium_dependency=curse.maven:lithium-360438:4765747
