--- a/versions/1.21.10/gradle.properties
+++ b/versions/1.21.10/gradle.properties
@@ -19,3 +19,4 @@ carpet_core_version = 1.21.9-pre1-1.4.184+v250916
 
 # Dependencies
 	fabric_api_version=0.135.0+1.21.10
+lithium_dependency=curse.maven:lithium-360438:7079732
