--- a/versions/1.21.3/gradle.properties
+++ b/versions/1.21.3/gradle.properties
@@ -20,3 +20,4 @@ carpet_core_version = 1.21.2-1.4.158+v241022
 
 # Dependencies
 	fabric_api_version=0.114.1+1.21.3
+lithium_dependency=curse.maven:lithium-360438:6099717
