--- a/versions/1.21.4/gradle.properties
+++ b/versions/1.21.4/gradle.properties
@@ -19,3 +19,4 @@ carpet_core_version = 1.21.4-1.4.161+v241203
 
 # Dependencies
 fabric_api_version=0.119.4+1.21.4
+lithium_dependency=curse.maven:lithium-360438:6401281
