--- a/versions/1.20.4/gradle.properties
+++ b/versions/1.20.4/gradle.properties
@@ -18,3 +18,4 @@ carpet_core_version = 1.20.3-1.4.128+v231205
 # Dependencies
 fabric_api_version=0.97.1+1.20.4
 lithium_dependency=curse.maven:lithium-360438:4972281
+ryansrenderingkit_version=1.0.6+1.20.1
