--- a/versions/1.21.5/gradle.properties
+++ b/versions/1.21.5/gradle.properties
@@ -20,3 +20,4 @@ carpet_core_version = 1.21.5-1.4.169+v250325
 # Dependencies
 	 fabric_api_version=0.128.2+1.21.5
 lithium_dependency=curse.maven:lithium-360438:6658792
+ryansrenderingkit_version=1.0.6+1.21.5
