--- a/versions/1.19.4/gradle.properties
+++ b/versions/1.19.4/gradle.properties
@@ -18,3 +18,4 @@ carpet_core_version = 1.19.4-1.4.100+v230314
 # Dependencies
 fabric_api_version=0.87.2+1.19.4
 lithium_dependency=curse.maven:lithium-360438:4439705
+ryansrenderingkit_version=1.0.6+1.19.4
