--- a/versions/1.20.1/gradle.properties
+++ b/versions/1.20.1/gradle.properties
@@ -18,3 +18,4 @@ carpet_core_version = 1.20-1.4.112+v230608
 # Dependencies
 fabric_api_version=0.92.6+1.20.1
 lithium_dependency=curse.maven:lithium-360438:4765724
+ryansrenderingkit_version=1.0.6+1.20.1
