--- a/versions/1.21.1/gradle.properties
+++ b/versions/1.21.1/gradle.properties
@@ -20,3 +20,4 @@ carpet_dependency=>=1.4.147
 # Dependencies
 fabric_api_version=0.116.6+1.21.1
 lithium_dependency=curse.maven:lithium-360438:6290412
+ryansrenderingkit_version=1.0.6+1.21.1
