--- a/versions/1.21.11/gradle.properties
+++ b/versions/1.21.11/gradle.properties
@@ -20,3 +20,4 @@
 # Dependencies
 	 fabric_api_version=0.139.4+1.21.11
 lithium_dependency=curse.maven:lithium-360438:7313048
+ryansrenderingkit_version=1.0.6+1.21.11
